Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.3
-
Fix Version/s: 10.3.1
-
Component/s: Authentication and Privilege System, Tests
-
Labels:None
Description
http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/9336/steps/test_2/logs/stdio
errno 1129: 'Host '2001:db8::6:6' is blocked because of many connection errors; unblock with 'mysqladmin flush-hosts'', instead of 1043...
perfschema.hostcache_ipv6_blocked w4 [ fail ]
|
Test ended at 2017-08-24 13:49:17
|
CURRENT_TEST: perfschema.hostcache_ipv6_blocked
|
mysqltest: At line 122: query 'connect con5b,"::1",quota,,test,$MASTER_MYPORT,' failed with wrong errno 1129: 'Host '2001:db8::6:6' is blocked because of many connection errors; unblock with 'mysqladmin flush-hosts'', instead of 1043...
|
 |
The result from queries just before the failure was:
|
< snip >
|
COUNT_FORMAT_ERRORS 0
|
COUNT_ADDRINFO_TRANSIENT_ERRORS 0
|
COUNT_ADDRINFO_PERMANENT_ERRORS 0
|
COUNT_FCRDNS_ERRORS 0
|
COUNT_HOST_ACL_ERRORS 0
|
COUNT_NO_AUTH_PLUGIN_ERRORS 0
|
COUNT_AUTH_PLUGIN_ERRORS 0
|
COUNT_HANDSHAKE_ERRORS 3
|
COUNT_PROXY_USER_ERRORS 0
|
COUNT_PROXY_USER_ACL_ERRORS 0
|
COUNT_AUTHENTICATION_ERRORS 0
|
COUNT_SSL_ERRORS 0
|
COUNT_MAX_USER_CONNECTIONS_ERRORS 0
|
COUNT_MAX_USER_CONNECTIONS_PER_HOUR_ERRORS 0
|
COUNT_DEFAULT_DATABASE_ERRORS 0
|
COUNT_INIT_CONNECT_ERRORS 0
|
COUNT_LOCAL_ERRORS 0
|
COUNT_UNKNOWN_ERRORS 0
|
FIRST_ERROR_SEEN set
|
LAST_ERROR_SEEN set
|