sql/sql_connect.h
@@ -85,7 +85,10 @@ bool thd_init_client_charset(THD *thd, uint cs_number);
 bool setup_connection_thread_globals(THD *thd);
 bool thd_prepare_connection(THD *thd);
 bool thd_is_connection_alive(THD *thd);
-int thd_set_peer_addr(THD *thd, sockaddr_storage *addr, const char *ip, uint port, bool check_proxy_networks);
+int thd_set_peer_addr(THD *thd, sockaddr_storage *addr,
+                      const char *ip, uint port,
+                      bool check_proxy_networks,
+                      uint *host_errors);
 
 bool login_connection(THD *thd);
 void prepare_new_connection_state(THD* thd);
